--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -35,7 +35,7 @@ $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
 $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
 $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
-$countSupporters = $modelInfo->getCountActiveSupporters();
+$this->countSupporters = $modelInfo->getCountActiveSupporters();
 //$countMembers = $modelInfo->getCountMembers();
 
 $helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
@@ -148,53 +148,12 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
              </div>
 </div>
 <div class="GridFlex-cell sidebar-right">   
-        <aside  id="explore-sidebar" >     
-        <div class="downloadDiv" >
-            <a href="https://www.opendesktop.org/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
-        </div>
+        <aside  id="explore-sidebar" > 
 
-        <div class="supportDiv" >
-        <?php 
-                $identity = Zend_Auth::getInstance()->getIdentity();
-                if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
+        <?php
+            echo $this->render('/home/partials/common_rightsidebar.phtml');
         ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Help to support the artists<br/>and keep the content free</a>
-        <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
-        <?php   }?>
-        </div>
-
-        <div  class="supportDiv  withborder" >    
-        <span><b><?=$countSupporters?></b> people support </span>        
-        <span style="display: block"><?php /*number_format($countMembers, 0, '.', ',');*/?>
-        those who support freedom
-         </span>
-         <div class="row">
-            <?php 
-                    $i=0;
-                   foreach ($this->supporters as $user) {                                                      
-                    if($i++>6) break;
-               ?>         
-               <a href="<?php echo $this->buildMemberUrl($user['member_id']); ?>" class="tooltipuserleft" data-tooltip-content="#tooltip_content" data-user="<?=$user['member_id']?>">                   
-                    <img height="25" width="25" src="<?php echo $this->Image($user['profile_image_url'], array('width' => '25', 'height' => '25', 'crop' => 2)); ?>" class="supporterx" />                   
-               </a>
-               <?php } ?>
-         </div>
-        </div>
-
-        <div  class="row sidebar-right-info" >                                
-            <span class="newsTitle"> News </span>
-            <div class="prod-widget-box right bgwhite " id="rss-feeds"> </div>                  
-      
-        <span class="newsTitle"> Comments </span>
-         <div class="prod-widget-box right bgwhite" id="lastcomments">
-                <?php
-                foreach ($this->comments as $this->comment) {
-                    echo $this->render('explore/partials/comment.phtml');
-                }
-                ?>
-
-            </div>          
+       
         </aside>
 </div>
 </div>
