--- a/application/modules/default/views/scripts/product/partials/productLikes.phtml
+++ b/application/modules/default/views/scripts/product/partials/productLikes.phtml
@@ -26,7 +26,7 @@
     ?>
         <div class="user " >
             <div class="u-wrap">
-                <a target="_blank" href="<?php echo $this->buildMemberUrl($user['member_id']); ?>">
+                <a  href="<?php echo $this->buildMemberUrl($user['member_id']); ?>">
                     <figure >
                         <img src="<?php echo $this->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
                     </figure>
