--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1757,6 +1757,12 @@ ul.meta-nav-top
             z-index: 100;
             margin-right: 10px;
             width: 70px;
+            .partialbuttonheartdetail{
+                width: 45px;
+                height: 45px;
+                float: right;
+                text-align: center;
+            }
         }
         .heartproject{
           position:relative;
@@ -1775,10 +1781,11 @@ ul.meta-nav-top
 
         span.heartnumber{
           z-index: 3;
-          position: relative; 
-          left: 45px;
-          top: 10px;
+          position: relative;          
+          top: -30px;
           color:white;
+          display: block;
+          margin: auto;
         }
 
         span.heartnumberpurple{
