downloadbtn compatible fix

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -754,6 +754,7 @@
                                 success: function (data, textStatus, jqXHR) {
                                     if (data.status == 'ok') {
                                         $("#files-panel").find('table[data-ppload-files] tbody').html('');
+                                        $('#dropdown_downloads').html('');
                                         $("#files-panel").find('table[data-ppload-files] tfoot').html('');
                                         getPploadFiles();
                                         return;
