--- a/application/modules/default/views/scripts/partials/footer/template.phtml
+++ b/application/modules/default/views/scripts/partials/footer/template.phtml
@@ -41,6 +41,39 @@
                    
                 </nav>
             </div>
+            
+            <div class="pull-right col-lg-2 col-md-2 col-sm-3 col-xs-3" style="height:66px; ">
+                
+                <script type='text/javascript' src='https://partner.googleadservices.com/gampad/google_service.js'>
+                </script>
+                <script type='text/javascript'>
+                GS_googleAddAdSenseService("ca-pub-1150932386931372");
+                GS_googleEnableAllServices();
+                </script>
+                <script type='text/javascript'>
+                GA_googleAddSlot("ca-pub-1150932386931372", "contentbox");
+                GA_googleAddSlot("ca-pub-1150932386931372", "fullsizebanner");
+                GA_googleAddSlot("ca-pub-1150932386931372", "skyscraper");
+                GA_googleAddSlot("ca-pub-1150932386931372", "standardbanner");
+                GA_googleAddSlot("ca-pub-1150932386931372", "pixel");
+                </script>
+                <script type='text/javascript'>
+                GA_googleFetchAds();
+                </script>
+            </div>
+            
+            <div class="pull-right col-lg-2 col-md-2 col-sm-3 col-xs-3" style="height:66px; ">
+                
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- 160x90, created 4/15/10 -->
+                <ins class="adsbygoogle"
+                     style="display:inline-block;width:160px;height:90px"
+                     data-ad-client="ca-pub-1150932386931372"
+                     data-ad-slot="7131800865"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
 
             <div class="pull-right col-lg-2 col-md-2 col-sm-3 col-xs-3" style="height:66px; ">
                 <div style="position:absolute; bottom:3px;color:#666">
@@ -65,4 +98,7 @@
             </div>
         </section>
     </section>
+    
+    
+    
 </footer>
