--- a/application/modules/default/views/scripts/partials/footer/template.phtml
+++ b/application/modules/default/views/scripts/partials/footer/template.phtml
@@ -77,6 +77,18 @@
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
+                
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Responsive New Displayblock -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-1150932386931372"
+                     data-ad-slot="1024407251"
+                     data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                
+                </script>
             </div>
         </section>
     </section>
