--- a/application/modules/default/views/scripts/user/partials/loopRated.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopRated.phtml
@@ -19,7 +19,7 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-    foreach ($this->likes as $file): 
+    foreach ($this->rated as $file): 
                 $file=(object)$file;
         ?>
       <div class="row smaller " >
@@ -51,9 +51,17 @@
             </div>            
         </div>
 
-        <div class="col-lg-3" >                                       
-                    <i class="fa fa-heart" aria-hidden="true" style="color:#8e44ad;"></i>               
-                    <?=$this->printDate($file->created_at)?>
+        <div class="col-lg-3" >                                                                    
+                    <?=$this->printDate($file->rating_created_at)?>
+                    <?php if($file->user_like==1) {
+                        ?>                    
+                        <i class="fa fa-plus voteup"></i>                    
+                    <?php    
+                    }else{
+                    ?>
+                   <i class="fa fa-minus votedown" ></i>
+                    <?php } ?>
+                    <?=$file->comment_text?>
         </div>
 
       </div>
