--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1757,6 +1757,12 @@ ul.meta-nav-top
             z-index: 100;
             margin-right: 10px;
             width: 70px;
+            .partialbuttonheartdetail{
+                width: 45px;
+                height: 45px;
+                float: right;
+                text-align: center;
+            }
         }
         .heartproject{
           position:relative;
@@ -1775,10 +1781,11 @@ ul.meta-nav-top
 
         span.heartnumber{
           z-index: 3;
-          position: relative; 
-          left: 45px;
-          top: 10px;
+          position: relative;          
+          top: -30px;
           color:white;
+          display: block;
+          margin: auto;
         }
 
         span.heartnumberpurple{
@@ -2737,6 +2744,18 @@ span.page-views {
       }
       .nowrap{
         white-space: nowrap;
+      }
+      i.voteup{
+          color: #409540;
+          font-size: 20px; 
+          padding-left:5px; 
+          padding-right:5px;
+      }
+      i.votedown{
+          color: #C9302C;
+          font-size: 20px; 
+          padding-left:5px; 
+          padding-right:5px;
       }
     }
 
@@ -5534,6 +5553,7 @@ img.imgpopover
 /*aboutme tab comments*/
 #my-comments-tabs-content {
   font-size: 11pt;
+  width: 1100px;
   .rownomargin
   {
     margin:0;
@@ -5556,8 +5576,15 @@ img.imgpopover
        {
          padding-bottom: 5px;
          padding-top: 5px;
-         border-top: 1px solid #ccd4d8;
-         width: 60%;
+         border-bottom: 1px solid #ccd4d8;
+        
+         font-size: small;
+         .project-image{
+            width: 50px;
+            height: 50px;
+            float: left;
+            margin-right: 15px;
+         }
      }
    .productrow:last-child {
                border-bottom: none;
@@ -5577,6 +5604,8 @@ img.imgpopover
     .cntComments
        {
           font-size: smaller;
+          display: block;
+          padding-top: 5px;
        
       }
       .productimg
@@ -5585,7 +5614,7 @@ img.imgpopover
               height:50px;
           }
       .commenttext{
-        padding-left: 35px;
+        padding-left: 25px;
         
       }
 }
