--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -222,11 +222,6 @@ $isSupporter = $this->stat['donationIssupporter'];
                                     Comments (<?=$this->comments->getTotalItemCount()?>)
                                 </a>
                             </li>
-                            <li>
-                                <a href="#user-favs" data-toggle="tab" role="tab"  aria-controls="user-favs">
-                                    Favs (<?=$this->likes->getTotalItemCount()?>)
-                                </a>
-                            </li>
                             <?php if(count($this->rated)>0){ ?>
                             <li>
                                 <a href="#user-rated" data-toggle="tab" role="tab"  aria-controls="user-rated">
@@ -234,6 +229,13 @@ $isSupporter = $this->stat['donationIssupporter'];
                                 </a>
                             </li>
                             <?php } ?>
+                             <?php if($this->likes->getTotalItemCount()>0){ ?>
+                            <li>
+                                <a href="#user-favs" data-toggle="tab" role="tab"  aria-controls="user-favs">
+                                    Favs (<?=$this->likes->getTotalItemCount()?>)
+                                </a>
+                            </li>
+                          <?php } ?>
                           
                         </ul>
                         </div>
@@ -249,7 +251,6 @@ $isSupporter = $this->stat['donationIssupporter'];
                                         <?php echo $this->render('user/partials/aboutme-products.phtml'); ?>                                       
                                     </div>
                                 <?php } ?>
-
                             </div>
     <?php /*
                             <div role="tabpanel" class="tab-pane " id="user-supports">
@@ -296,11 +297,14 @@ $isSupporter = $this->stat['donationIssupporter'];
                             <div  role="tabpanel" class="tab-pane " id="user-comments">                                    
                                   <?php echo $this->render('user/partials/loopMyComments.phtml'); ?>
                             </div>
+
+                             <?php if($this->likes->getTotalItemCount()>0){ ?>
                             <div  role="tabpanel" class="tab-pane " id="user-favs">       
                                     <div class="my-fav-list">                                                                   
                                   <?php echo $this->render('user/partials/aboutme-likes.phtml'); ?>
                                   </div>
-                            </div>   
+                            </div> 
+                            <?php } ?>  
 
                              <?php if(count($this->rated)>0){ ?>
                             <div  role="tabpanel" class="tab-pane " id="user-rated">    
