--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -614,6 +614,9 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
         </div>
     </main>
 
+
+ 
+
     <script>(function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
@@ -660,6 +663,6 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
             PartialCommentReviewForm.setup();
             PartialsButtonHeartDetail.setup();           
             TooltipUser.setup("tooltipuserleft","left");      
-            
+            OpendownloadfileWerbung.setup();
         });
     ');
