--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -311,7 +311,7 @@
                                     }
 
                                     var downloadButton = '';
-                                    downloadButton = '<a href="'+downloadUrl+'" class="btn btn-native btn-min-width" ><img src="/images/system/download.svg" alt="download" style="width:20px; height:20px"></a>' ;
+                                    downloadButton = '<a href="'+downloadUrl+'" class="btn btn-native btn-min-width opendownloadfile" ><img src="/images/system/download.svg" alt="download" style="width:20px; height:20px"></a>' ;
 
                                     if(this.version==null) {version = '';} else{version = this.version;}
                                     var isExternLink = false;
